--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "nyc --reporter=html npm test && open-cli coverage/index.html",
     "coverage-ci": "nyc --reporter=lcov npm test && codecov",
     "lint": "standard",
-    "test": "tape test/*.js | tap-spec && npm run test-ts && npm run lint",
+    "test": "tape-es test/*.js | tap-spec && npm run test-ts && npm run lint",
     "test-ts": "tsd"
   },
   "repository": {
@@ -32,7 +32,7 @@
     "open-cli": "^6.0.1",
     "standard": "^16.0.3",
     "tap-spec": "^5.0.0",
-    "tape": "^5.2.2",
+    "tape-es": "^1.2.17",
     "tsd": "^0.14.0"
   },
   "dependencies": {
@@ -51,5 +51,6 @@
   ],
   "engines": {
     "node": ">=10"
-  }
+  },
+  "type": "module"
 }
